Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126958

avfvideorenderer control - don't use invalid pointers

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 Beta2, 6.9.0 FF
    • 6.8, 6.9
    • Multimedia
    • None
    • macOS
    • 0f9a68713 (dev), 17b4f6246 (6.8)

    Description

      Having this line:

      frame = QVideoFramePrivate::createFrame(std::move(buffer), buffer->videoFormat());
      

      ends in dereferencing a nullptr (after a 'move').

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tpochep Timur Pocheptsov
              tpochep Timur Pocheptsov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes