avfvideorendercontrol: do not dereference nullptr

Arguments for a call are evaluated in unspecified order, we end up
with 'buffer' smart pointer 'moved' from, and then calling buffer->videoFormat()

Fixes: QTBUG-126958
Pick-to: 6.8
Change-Id: Id69fe48230442c5276aadb33972d620b88789a9c
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>